# fast-queue

./: CMakeLists.txt  CMakePresets.json  Dockerfile  FastQueue.cpp  FastQueue.h  README.md  compose.yaml  docker-compose.yml  temp.conf  vcpkg_rf.txt
scripts/: create_queue.sh  delete_queue.sh  display_messages.sh  display_metadata_changes.sh  parse_config.sh  show_partitions_info.sh
scripts/common/: byte_conversion.sh  date_conversion.sh  file_read.sh  handle_response_err_code.pl  parse_config.sh  reverse_endian.sh  send_ipc_request.pl  send_tcp_request.pl  version_conversion.sh
scripts/common/cluster_info/: retrieve_leader_id_response_handler.pl  retrieve_leader_info.sh
scripts/common/validations/: is_corrupted.sh  is_number.sh  is_valid_queue_name.sh
scripts/create_queue/: help.sh  index.sh  parse_config.sh  response_handler.pl
scripts/delete_queue/: help.sh  index.sh  parse_config.sh  response_handler.pl
scripts/display_messages/: help.sh  index.sh  messages_parsing.sh  parse_config.sh
scripts/display_metadata_changes/: help.sh  index.sh  metadata_parsing.sh  parse_config.sh
scripts/display_metadata_changes/print/: consumer_group.sh  create_queue.sh  lagging_follower.sh  node_registration.sh  partition_assignment.sh  queue.sh  transaction_group.sh
scripts/show_partitions_info/: help.sh  index.sh  response_handler.pl
src/header_files/: BeforeServerStartupHandler.h  Constants.h  Enums.h  InterProcessCommunicator.h  Settings.h  SettingsUpdateHandler.h
src/header_files/__linux/: memcpy_s.h
src/header_files/cluster_management/: ClusterMetadata.h  ClusterMetadataApplyHandler.h  Commands.h  Controller.h  DataNode.h  QueuePartitionInfo.h
src/header_files/exceptions/: CurruptionException.h
src/header_files/file_management/: CacheHandler.h  DiskFlusher.h  DiskReader.h  FileHandler.h  FileStream.h  QueueSegmentFilePathMapper.h
src/header_files/generic/: Cache.h  IndexedHeap.h
src/header_files/logging/: Logger.h
src/header_files/network_management/: Connection.h  ConnectionsManager.h  SocketHandler.h  SocketListenerHandler.h  SocketSession.h  SslContextHandler.h
src/header_files/queue_management/: CompactionHandler.h  Partition.h  PartitionSegment.h  Queue.h  QueueManager.h  QueueMetadata.h  RetentionHandler.h  SegmentLockManager.h  TransactionHandler.h  TransactionLockManager.h
src/header_files/queue_management/messages_management/: Consumer.h  MessageOffsetAckHandler.h  MessagesHandler.h  Producer.h  SegmentAllocator.h
src/header_files/queue_management/messages_management/index_management/: BPlusTreeIndexHandler.h  BTreeNode.h  SegmentMessageMap.h
src/header_files/requests_management/: ClassToByteTransformer.h  ClientRequestExecutor.h  InternalRequestExecutor.h  RequestManager.h  RequestMapper.h  Requests.h  ResponseMapper.h  Responses.h
src/header_files/util/: BloomFilter.h  Cache.h  ConnectionPool.h  DataCompressor.h  Helper.h  IndexedHeap.h  ThreadPool.h  Trie.h  Util.h
src/source_files/: BeforeServerStartupHandler.cpp  Constants.cpp  InterProcessCommunicator.cpp  Settings.cpp  SettingsUpdateHandler.cpp
src/source_files/cluster_management/: ClusterMetadata.cpp  ClusterMetadataApplyHandler.cpp  Commands.cpp  Controller.cpp  DataNode.cpp
src/source_files/file_management/: CacheHandler.cpp  DiskFlusher.cpp  DiskReader.cpp  FileHandler.cpp  FileStream.cpp  QueueSegmentFilePathMapper.cpp
src/source_files/logging/: Logger.cpp
src/source_files/network_management/: ConnectionsManager.cpp  SocketHandler.cpp  SocketListenerHandler.cpp  SocketSession.cpp  SslConnectionHandler.cpp
src/source_files/queue_management/: CompactionHandler.cpp  Partition.cpp  PartitionSegment.cpp  Queue.cpp  QueueManager.cpp  QueueMetadata.cpp  RetentionHandler.cpp  SegmentLockManager.cpp  TransactionHandler.cpp  TransactionLockManager.cpp
src/source_files/queue_management/messages_management/: Consumer.cpp  MessageOffsetAckHandler.cpp  MessagesHandler.cpp  Producer.cpp  SegmentAllocator.cpp
src/source_files/queue_management/messages_management/index_management/: BPlusTreeIndexHandler.cpp  BTreeNode.cpp  SegmentMessageMap.cpp
src/source_files/requests_management/: ClassToByteTransformer.cpp  ClientRequestExecutor.cpp  InternalRequestExecutor.cpp  RequestManager.cpp  RequestMapper.cpp  ResponseMapper.cpp
src/source_files/util/: BloomFilter.cpp  ConnectionPool.cpp  DataCompressor.cpp  Helper.cpp  ThreadPool.cpp  Trie.cpp  Util.cpp
